config/minio-console/admin-console-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-console
  namespace: minio-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-console
  template:
    metadata:
      labels:
        app: minio-console
    spec:
      containers:
        - name: console
          image: ghcr.io/georgmangold/console:latest
          imagePullPolicy: Always


          ports:
            - containerPort: 9090
              protocol: TCP
