config/minio-console/admin-console-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio-console
spec:
  type: NodePort
  selector:
    app: minio-console
  ports:
    - port: 9090        # container port
      targetPort: 9090  # internal container port
      nodePort: 30090   # access on nodeIP:30090
